fixed bugs and used flex to align text on the website

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    font-family: "Courier New", Courier, monospace, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
   }
   
   
@@ -26,40 +26,35 @@
   
   /************ Welcome to Chef's vison content ********************/
   .welcome-message {
-        background: #52796f;
+        background: #9cafaa;
         display: inline-block;
         text-align: center;
         color: rgb(255, 255, 255);
+        margin-bottom: 200px;
   }
   /************ End Welcome to Chef's vison content ********************/
 
 
 
   /************ Try New Dishes Images for website styling ********************/
+ .image-decoration h1{
+  font-size: xx-large;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  color:#9cafaa;
+
+ }
+ .image-decoration{
+    flex-direction: row;
+ }
+
   #ramenBowl{
-    width: 400px;
-    left: 80px
-
-
+    width: 300px;
   }
-  #Fries{
-    width: 400px;
-
-
-  }
-
-  #saladBowl{
-    width: 400px;
-
-
-  }
-
-  #Brownies{
-    width: 400px;
-    left: 500px
-
-
-  }
+   #Brownies{
+    width:300px;
+   }
 
   
   /************ Try New Dishes Images for website styling ********************/
@@ -70,30 +65,61 @@
   /***************Change the text color for the "What You'll Find"*****/
   .what-you-find h2,
   .what-you-find p {
-    color: #000000;
-    
+    color: #ffffff;
   }
 
-    .what-you-find, .why-this-website{
-    background-color: #52796f;
+  .what-you-find h2,.why-this-website h2{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    padding: 50px 50px 50px 50px;
   }
-
   
+  .what-you-find,.why-this-website{
+    background-color: #9cafaa
+  }
+
+
   /***********Change the text color for the "Why This Website"******/
   .why-this-website h2,
   .why-this-website p {
-    color: #000000; 
-  }
-  
-  /*******Change the text color for the "Contact Us" section********/
-  #contact-us h2,
-  #contact-us p {
     color: #ffffff; 
   }
-
-  #contact-us{
-    background-color: #888;
+  
+  .what-you-find p,.why-this-website p{
+     padding: 50px 50px 50px 50px;
   }
+
+
+  /*******Change the text color for the "Contact Us" section********/
+  #contact-us{
+    background-color: #617a74;
+    
+  }
+
+  #contact-us h2{
+    padding: 60px 0px 70px 80px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    color: #ffffff;
+    
+
+
+  }
+  #contact-us p{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin-bottom: 0;
+    padding-bottom: 50px;
+    color: #ffffff;
+
+   
+
+  }
+
+  
   
   /******Content for nav bar****************/
   .nav-wrapper {
@@ -178,7 +204,7 @@
   .title {
     margin: 10px;
     text-align: center;
-    background-color: #52796f;
+    background-color: #6a9c90;
     padding: 50px 10px 15px 10px;
   }
   /*******End content for recipe, ingredient, saved, and nutrition***************/
